--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.13",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
